# bosch-ble

./: .gitignore  AGENTS.md  README.md  mise.toml  pyproject.toml
bosch_ble/: bluez.py  dashboard.py  dump_gatt.py  handshake.py  live.py  log_chars.py  mcsp.py  messagebus.py  mgmt.py  probe.py  scan.py  validate_live.py
docs/: 2026-04-20-pairing-blocker-summary.md  current-design.md  makerdiary-ble-sniffer-ubuntu24.md
docs/superpowers/specs/: 2026-04-17-agents-design.md  2026-04-17-scanner-tui-design.md
findings/: 2026-04-21T20-30-00-privacy-off-connect.md  2026-04-21T21-05-00-general-discoverable-is-not-pairing-mode.md  2026-04-21T22-15-00-pairing-advertisement-window-is-short.md  2026-04-21T22-35-00-repo-and-manual-connect-use-the-same-bad-le-create-connection-params.md  2026-04-21T22-55-00-load-conn-param-needs-a-trusted-mgmt-socket.md  README.md
scripts/: bluetoothd-debug-disable  bluetoothd-debug-enable  bluetoothd-debug-tail  manual-connect-after-load-conn  manual-connect-after-load-conn-host  remote-sniff-start.sh  sniff-copy  sniff-start  sniff-stop
tests/: test_cli_entrypoints.py  test_dashboard.py  test_mcsp.py  test_messagebus.py  test_mgmt.py  test_scan.py  test_sniffer_scripts.py
