[project]
name = "bosch-ble"
version = "0.1.0"
description = "Fucking around with Bosch BLE devices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=3.0.1",
    "textual>=8.2.3",
]

[dependency-groups]
dev = ["mypy>=1.20.1", "pytest>=9.0.3", "ruff>=0.15.11", "ty>=0.0.31"]

[project.scripts]
bosch-ble-bluez-connect = "bosch_ble.bluez:connect_cli"
bosch-ble-bluez-info = "bosch_ble.bluez:info_cli"
bosch-ble-dump-gatt = "bosch_ble.dump_gatt:cli"
bosch-ble-log-chars = "bosch_ble.log_chars:cli"
bosch-ble-scan = "bosch_ble.scan:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
